--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,19 @@
 .btn-group .btn {
   margin-right: 10px;
 }
+
+.question {
+  font-size: 1.5em;
+  font-weight: 400;
+  padding: 10px 20px;
+}
+
+.question .option label {
+  font-size: 1em;
+  font-weight: 400;
+  padding: 10px;
+}
+
+.btn {
+  margin: 10px;
+}
